package core;

/**
 * This class has static methods for determining all possible moves for a single square of the board
 */
public class PieceBehaviour {

    public static Move[] kingLegalMoves(Square checkedSquare, Square[][] squares){
        return null;
    }
    public static Move[] pawnLegalMoves(Square checkedSquare, Square[][] squares){
        return null;
    }
    public static Move[] rookLegalMoves(Square checkedSquare, Square[][] squares){
        return null;
    }
    public static Move[] bishopLegalMoves(Square checkedSquare, Square[][] squares){
        return null;
    }
    public static Move[] knightLegalMoves(Square checkedSquare, Square[][] squares){
        return null;
    }
    public static Move[] quuenLegalMoves(Square checkedSquare, Square[][] squares){
        return null;
    }
}
