package core.pieces;

import players.Player;

/**
 * This class represents a bishop in chess
 */
public class Bishop extends Piece {
    public Bishop(Player player) {
        super(player);
    }
}
