package core.pieces;

import players.Player;

/**
 * This class represents a knight in chess
 */
public class Knight extends Piece {
    public Knight(Player player) {
        super(player);
    }
}
