package enums;

public enum PlayerType {
    HUMAN,
    NETWORK_USER,
    COMPUTER;
}
